--- a/Movies.Web/Movies.Web.csproj
+++ b/Movies.Web/Movies.Web.csproj
@@ -14,6 +14,7 @@
     <None Remove="Microsoft.EntityFrameworkCore.Tools" />
     <None Remove="Microsoft.EntityFrameworkCore.Sqlite" />
     <None Remove="Data\Migrations\" />
+    <None Remove="Microsoft.Extensions.Http.Polly" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
@@ -28,6 +29,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
+    <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="6.0.10" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
